crates/courier-ftp/src/components/prompts/snapshots/courier_ftp__components__prompts__snapshot_tests__host_key_unknown_other_type_note_80x24.snap
---
source: crates/courier-ftp/src/components/prompts/snapshot_tests.rs
expression: "format!(\"{text}{legend}\")"
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
└─┌ Unknown host key ────────────────────────────────────────────────────────┐─┘
┏▶│ The server's host key is not known. You have no guarantee that the       │─┐
┃ │ server is the computer you think it is.                                  │ │
┃ │                                                                          │ │
┃ │ Host:       web01.example.com:22                                         │ │
┃ │ Key type:   ssh-ed25519 (256 bits)                                       │ │
┃ │ SHA-256:    SHA256:uYxmMoF3aflKiV/iuu80yFQwZt3pbSCXEaovtc9SyY8           │ │
┃ │ MD5:        MD5:9a:52:0e:7c:1f:33:a8:0d:4b:6e:21:c5:90:fe:12:ab          │ │
┃ │ Note:       This server also has a trusted ssh-rsa key.                  │…│
┃ │                                                                          │ │
┃ │ [x] Always trust this host and save the key in the vault                 │ │
┃ │                                                                          │ │
┃ │                       [ Trust ]        [ Cancel ]                        │ │
┗━└──────────────────────────────────────────────────────────────────────────┘─┘
┌ Queue ───────────────────────────────────────────────────────────────────────┐
│(not available yet)                                                           │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 – not connected │ Type: Auto │ ⇅ off                                  F10 quit 
--- styles ---
  0   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
  0   1+79  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  1   0+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
  1   9+71  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  2   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  3   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  4   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  5   0+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  5   2+76  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  5  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  6   0+2   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
  6   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  6  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  6  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  7   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
  7   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  7   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  7  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  7  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  8   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
  8   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  8   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  8  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  8  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  9   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
  9   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
  9   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  9  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
  9  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 10   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 10   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 10   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 10  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 10  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 11   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 11   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 11   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 11  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 11  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 12   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 12   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 12   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 12  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 12  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 13   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 13   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 13   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 13  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 13  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 14   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 14   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 14   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 14  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 14  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 15   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 15   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 15   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 15  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 15  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 16   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 16   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 16   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 16  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 16  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 17   0+1   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 17   1+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 17   2+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 17  26+9   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold().reversed()
 17  77+1   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 17  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 18   0+2   Style::new().fg(Color::Indexed(3)).bg(Color::Reset).underline_color(Color::Reset).bold().dim()
 18   2+76  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).bold()
 18  78+2   Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 19   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 20   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 21   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 22   0+80  Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
 23   0+1   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).dim()
 23   1+15  Style::new().fg(Color::Indexed(246)).bg(Color::Indexed(236)).underline_color(Color::Reset).dim()
 23  16+55  Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).dim()
 23  71+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).bold().dim()
 23  74+6   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset).dim()
